--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/")
 if(NOT CMAKE_BUILD_TYPE)
     set(CMAKE_BUILD_TYPE Release)
 endif()
-set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD 17)
 if(MSVC)
     add_definitions(-D_CRT_SECURE_NO_WARNINGS)
 else()
@@ -21,7 +21,7 @@ set(THREADS_PREFER_PTHREAD_FLAG ON)
 find_package(Threads REQUIRED)
 target_link_libraries(trojan ${CMAKE_THREAD_LIBS_INIT})
 
-find_package(Boost 1.66.0 REQUIRED COMPONENTS system program_options)
+find_package(Boost 1.66.0 REQUIRED COMPONENTS system program_options thread chrono)
 target_include_directories(trojan PRIVATE ${Boost_INCLUDE_DIR})
 target_link_libraries(trojan ${Boost_LIBRARIES})
 if(MSVC)
@@ -43,7 +43,7 @@ if(OPENSSL_VERSION VERSION_GREATER_EQUAL 1.1.1)
     endif()
 endif()
 
-option(ENABLE_MYSQL "Build with MySQL support" ON)
+option(ENABLE_MYSQL "Build with MySQL support" OFF)
 if(ENABLE_MYSQL)
     find_package(MySQL REQUIRED)
     target_include_directories(trojan PRIVATE ${MYSQL_INCLUDE_DIR})
@@ -51,7 +51,7 @@ if(ENABLE_MYSQL)
     add_definitions(-DENABLE_MYSQL)
 endif()
 
-option(FORCE_TCP_FASTOPEN "Force build with TCP Fast Open support" OFF)
+option(FORCE_TCP_FASTOPEN "Force build with TCP Fast Open support" ON)
 if(FORCE_TCP_FASTOPEN)
     add_definitions(-DTCP_FASTOPEN=23 -DTCP_FASTOPEN_CONNECT=30)
 endif()
