--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/checkout@v4
       - name: Build trojan
         run: |
-          apt-get install -y libboost-all-dev build-essential cmake libssl-dev 
+          sudo apt-get install -y libboost-all-dev build-essential cmake libssl-dev 
           echo 'target_link_libraries(trojan dl)' >> CMakeLists.txt
           cmake -DMYSQL_INCLUDE_DIR=/usr/local/include/mariadb -DMYSQL_LIBRARY=/usr/local/lib/mariadb/libmysqlclient.a -DDEFAULT_CONFIG=config.json -DFORCE_TCP_FASTOPEN=ON -DBoost_USE_STATIC_LIBS=ON .
           make
