--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,7 +34,7 @@ jobs:
         run: |
           set -euo pipefail
           brew install boost openssl
-          cmake -DBoost_USE_STATIC_LIBS=ON -DOPENSSL_INCLUDE_DIR=/usr/local/opt/openssl@1.1/include -DOPENSSL_CRYPTO_LIBRARY=/usr/local/opt/openssl@1.1/lib/libcrypto.a -DOPENSSL_SSL_LIBRARY=/usr/local/opt/openssl@1.1/lib/libssl.a -DDEFAULT_CONFIG=config.json -DENABLE_MYSQL=OFF -DCMAKE_OSX_DEPLOYMENT_TARGET=10.13 .
+          cmake -DBoost_USE_STATIC_LIBS=ON -DDEFAULT_CONFIG=config.json -DCMAKE_OSX_DEPLOYMENT_TARGET=10.13 .
           make
           strip -SXTx trojan
       - name: Upload artifact
