--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,7 +48,7 @@ jobs:
           brew install boost openssl
           cmake -DBoost_USE_STATIC_LIBS=ON \
                 -DDEFAULT_CONFIG=config.json \
-                -DCMAKE_OSX_DEPLOYMENT_TARGET=10.13 .
+                -DCMAKE_OSX_DEPLOYMENT_TARGET=14.0 .
           make
           strip -SXTx trojan
 
@@ -91,6 +91,7 @@ jobs:
       - name: Upload Linux Binary to Release
         uses: actions/upload-release-asset@v1
         with:
+          token: ${{ secrets.GITHUB_TOKEN }}
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ./artifacts/linux/trojan
           asset_name: trojan-linux
@@ -99,6 +100,7 @@ jobs:
       - name: Upload macOS Binary to Release
         uses: actions/upload-release-asset@v1
         with:
+          token: ${{ secrets.GITHUB_TOKEN }}
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ./artifacts/macos/trojan
           asset_name: trojan-macos
