--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -82,5 +82,5 @@ jobs:
         uses: softprops/action-gh-release@v2
         with:
           files: |
-            ./artifacts/trojan-linux
-            ./artifacts/trojan-macos
+            artifacts/trojan-linux
+            artifacts/trojan-macos
