--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,6 +27,7 @@ jobs:
                 -DDEFAULT_CONFIG=config.json \
                 -DFORCE_TCP_FASTOPEN=ON \
                 -DBoost_USE_STATIC_LIBS=ON \
+                -DOPENSSL_USE_STATIC_LIBS=ON \
                 -LA .
           make
           strip -s trojan
